codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_from_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5609
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codez to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                100% context left  "
