codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_fresh_draft.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Ask Codez to do anything              "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"       100% context left | Vim: Insert  "
